Installed neccesary packages and built barebone in settings to use them
Created View functions necessary for application

--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-psycopg2 = ">=2.8"
 Django = "<4.0,>=3.0"
+djangorestframework = "*"
+psycopg2-binary = "*"
+django-cors-headers = "*"
+channels = "*"
+channels-redis = "*"
 
 [dev-packages]
 
